perf: set node_env variables for test, dev and production

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
 	"scripts": {
 		"dupe-check": "yarn jsinspect ./src",
 		"lint": "eslint src/**/*.js",
-		"nodemon": "nodemon src/index.js",
+		"nodemon": "cross-env NODE_ENV=development nodemon src/index.js",
 		"prettier": "prettier src/**/*.js --write",
-		"start": "node src/index.js",
-		"test": "yarn lint && yarn test-coverage",
-		"test-coverage": "jest --coverage --verbose",
-		"test-only": "jest --verbose"
+		"start": "cross-env NODE_ENV=production node src/index.js",
+		"test": "cross-env NODE_ENV=test yarn lint && yarn test-coverage",
+		"test-coverage": "cross-env NODE_ENV=test jest --coverage --verbose",
+		"test-only": "cross-env NODE_ENV=test jest --verbose"
 	},
 	"jest": {
 		"clearMocks": true,
@@ -53,6 +53,7 @@
 	"dependencies": {
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
+		"cross-env": "^7.0.0",
 		"cssom": "^0.4.4",
 		"express": "^4.17.1",
 		"express-bearer-token": "^2.4.0",
