--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
 		"lint": "eslint src/**/*.js",
 		"nodemon": "cross-env NODE_ENV=development nodemon src/index.js",
 		"prettier": "prettier ** --write",
-		"start": "cross-env NODE_ENV=production node src/index.js",
+		"start": "node src/index.js",
 		"test": "cross-env NODE_ENV=test yarn lint && yarn test-coverage",
 		"test-coverage": "cross-env NODE_ENV=test jest --coverage --verbose",
-		"test-only": "cross-env NODE_ENV=test jest --verbose"
+		"test-only": "cross-env NODE_ENV=test jest --verbose",
+		"install-windows-service": "cross-env NODE_ENV=production winser -i -s -a -n \"Document Conversion Service\"",
+		"uninstall-windows-service": "winser -r -x -s -n \"Document Conversion Service\""
 	},
 	"jest": {
 		"clearMocks": true,
