--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"cssom": "^0.4.4",
 		"express": "^4.17.1",
 		"express-bearer-token": "^2.4.0",
+		"express-winston": "^4.0.2",
 		"glob": "^7.1.6",
 		"helmet": "^3.21.2",
 		"htmltidy2": "^0.3.0",
@@ -67,6 +68,8 @@
 		"multer": "^1.4.2",
 		"node-poppler": "^1.5.0",
 		"uuid": "^3.4.0",
-		"winser": "^1.0.3"
+		"winser": "^1.0.3",
+		"winston": "^3.2.1",
+		"winston-daily-rotate-file": "^4.4.2"
 	}
 }
