--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
 		"cross-env": "^7.0.0",
 		"cssom": "^0.4.4",
 		"express": "^4.17.1",
-		"express-bearer-token": "^2.4.0",
 		"express-winston": "^4.0.2",
 		"glob": "^7.1.6",
 		"helmet": "^3.21.2",
@@ -67,6 +66,8 @@
 		"jsdom": "^16.1.0",
 		"multer": "^1.4.2",
 		"node-poppler": "^1.5.0",
+		"passport": "^0.4.1",
+		"passport-http-bearer": "^1.0.1",
 		"uuid": "^3.4.0",
 		"winser": "^1.0.3",
 		"winston": "^3.2.1",
