--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"cssom": "^0.4.4",
 		"express": "^4.17.1",
 		"express-winston": "^4.0.2",
+		"fix-utf8": "^1.1.1",
 		"glob": "^7.1.6",
 		"helmet": "^3.21.2",
 		"htmltidy2": "^0.3.0",
