--- a/package.json
+++ b/package.json
@@ -69,9 +69,12 @@
 		"node-poppler": "^1.5.0",
 		"passport": "^0.4.1",
 		"passport-http-bearer": "^1.0.1",
+		"sanitize-html": "^1.21.1",
 		"uuid": "^3.4.0",
+		"validator": "^12.2.0",
 		"winser": "^1.0.3",
 		"winston": "^3.2.1",
-		"winston-daily-rotate-file": "^4.4.2"
+		"winston-daily-rotate-file": "^4.4.2",
+		"xss": "^1.0.6"
 	}
 }
