--- a/package.json
+++ b/package.json
@@ -64,16 +64,13 @@
 		"helmet": "^3.21.3",
 		"htmltidy2": "^0.3.0",
 		"jsdom": "^16.2.0",
-		"moment": "^2.24.0",
 		"multer": "^1.4.2",
 		"node-poppler": "^1.5.1",
 		"passport": "^0.4.1",
 		"passport-http-bearer": "^1.0.1",
-		"sanitize-html": "^1.22.0",
+		"sanitize-middleware": "^1.0.0",
 		"uuid": "^7.0.1",
-		"validator": "^12.2.0",
 		"winston": "^3.2.1",
-		"winston-daily-rotate-file": "^4.4.2",
-		"xss": "^1.0.6"
+		"winston-daily-rotate-file": "^4.4.2"
 	}
 }
