--- a/package.json
+++ b/package.json
@@ -74,5 +74,12 @@
 		"uuid": "^7.0.2",
 		"winston": "^3.2.1",
 		"winston-daily-rotate-file": "^4.4.2"
-	}
+	},
+	"apidoc": {
+		"title": "Document Conversion API",
+		"name": "Document Conversion API",
+		"template": {
+		  "withCompare": false
+		}
+	  }
 }
