--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"license": "MIT",
 	"scripts": {
 		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md",
-		"docs": "apidoc -i src/ -o doc/",
+		"docs": "apidoc -i src/ -o docs/",
 		"dupe-check": "yarn jsinspect ./src",
 		"lint": "eslint src/**/*.js",
 		"nodemon": "cross-env NODE_ENV=development nodemon src/index.js",
