--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 	"dependencies": {
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
+		"cors": "^2.8.5",
 		"cssom": "^0.4.4",
 		"express": "^4.17.1",
 		"express-winston": "^4.0.3",
