--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"eslint-plugin-import": "^2.20.2",
 		"eslint-plugin-jest": "^23.8.2",
 		"eslint-plugin-json": "^2.1.1",
+		"is-html": "^2.0.0",
 		"jest": "^25.2.4",
 		"jsinspect": "^0.12.7",
 		"node-mocks-http": "^1.8.1",
