--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"prettier": "prettier ** --write",
 		"start": "node src/index.js",
 		"test": "cross-env NODE_ENV=test yarn lint && yarn test-only",
-		"test-coverage": "cross-env NODE_ENV=test jest --coverage --verbose",
-		"test-only": "cross-env NODE_ENV=test jest --verbose"
+		"test-coverage": "cross-env NODE_ENV=test jest --coverage",
+		"test-only": "cross-env NODE_ENV=test jest --detectOpenHandles"
 	},
 	"jest": {
 		"clearMocks": true,
