--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
 		"cors": "^2.8.5",
 		"cssom": "^0.4.4",
 		"express": "^4.17.1",
-		"express-winston": "^4.0.3",
+		"express-pino-logger": "^5.0.0",
+		"file-stream-rotator": "^0.5.7",
 		"fix-utf8": "^1.1.1",
 		"glob": "^7.1.6",
 		"helmet": "^3.22.0",
@@ -73,9 +74,7 @@
 		"passport": "^0.4.1",
 		"passport-http-bearer": "^1.0.1",
 		"sanitize-middleware": "^2.0.5",
-		"uuid": "^7.0.3",
-		"winston": "^3.2.1",
-		"winston-daily-rotate-file": "^4.4.2"
+		"uuid": "^7.0.3"
 	},
 	"apidoc": {
 		"title": "Document Conversion API",
