tests: ignore index and config in coverage collection

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"jest": {
 		"clearMocks": true,
 		"collectCoverageFrom": [
-			"src/**/*.js"
+			"src/server/**/*.js"
 		],
 		"testEnvironment": "node",
 		"testTimeout": 10000
