--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
 	"name": "doc-conversion-service",
-	"version": "4.0.4",
+	"version": "4.0.5",
 	"description": "RESTful API web service for converting clinical documents/files",
 	"main": "src/index.js",
 	"repository": "git@github.com:Fdawgs/doc-conversion-service.git",
 	"author": "Frazer Smith",
 	"license": "MIT",
+	"engines": {
+		"node": ">=12.16.3"
+	},
 	"scripts": {
 		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md && prettier CHANGELOG.md --write",
 		"docs": "apidoc -i src/ -o docs/",
