--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"is-html": "^2.0.0",
 		"jest": "^26.0.1",
 		"jsinspect": "^0.12.7",
+		"lodash": "^4.17.15",
 		"node-mocks-http": "^1.8.1",
 		"nodemon": "^2.0.3",
 		"prettier": "^2.0.5",
