--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
 			}
 		],
 		"lines-between-class-members": "error",
+		"no-console": "off",
 		"no-multiple-empty-lines": [
 			"error",
 			{
@@ -25,9 +26,6 @@
 				"maxEOF": 0
 			}
 		],
-		"no-console": "off",
-		"prefer-destructuring": "off",
-		"prefer-const": "error",
-		"no-var": "error"
+		"prefer-destructuring": "off"
 	}
 }
