--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"eslint-plugin-import": "^2.20.2",
 		"eslint-plugin-jest": "^23.10.0",
 		"eslint-plugin-json": "^2.1.1",
+		"faker": "^4.1.0",
 		"is-html": "^2.0.0",
 		"jest": "^26.0.1",
 		"jsinspect": "^0.12.7",
