--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,17 @@
 		"es6": true,
 		"node": true
 	},
-	"extends": ["airbnb-base", "plugin:jest/recommended", "prettier"],
+	"extends": [
+		"airbnb-base",
+		"plugin:promise/recommended",
+		"plugin:jest/recommended",
+		"prettier"
+	],
 	"parserOptions": {
 		"ecmaVersion": 2020,
 		"sourceType": "module"
 	},
-	"plugins": ["import", "jest", "json"],
+	"plugins": ["import", "jest", "json", "promise"],
 	"rules": {
 		"import/no-extraneous-dependencies": [
 			"error",
@@ -26,6 +31,8 @@
 				"maxEOF": 0
 			}
 		],
-		"prefer-destructuring": "off"
+		"prefer-destructuring": "off",
+		"promise/prefer-await-to-then": "warn",
+		"promise/prefer-await-to-callbacks": "warn"
 	}
 }
