--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,13 +7,14 @@
 		"airbnb-base",
 		"plugin:promise/recommended",
 		"plugin:jest/recommended",
+		"plugin:jsdoc/recommended",
 		"prettier"
 	],
 	"parserOptions": {
 		"ecmaVersion": 2020,
 		"sourceType": "module"
 	},
-	"plugins": ["import", "jest", "json", "promise"],
+	"plugins": ["import", "jest", "jsdoc", "json", "promise"],
 	"rules": {
 		"import/no-extraneous-dependencies": [
 			"error",
