--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
 		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md && prettier CHANGELOG.md --write",
 		"docs": "apidoc -i src/ -o docs/",
 		"dupe-check": "yarn jsinspect ./src",
-		"lint": "eslint src/**/*.js",
+		"lint": "eslint . --cache --ext js,jsx,ts,tsx",
 		"nodemon": "cross-env NODE_ENV=development nodemon src/index.js",
-		"prettier": "prettier ** --write",
+		"prettier": "prettier . --write --ignore-path .gitignore",
 		"start": "node src/index.js",
 		"test": "cross-env NODE_ENV=test yarn lint && yarn test-only",
 		"test-coverage": "cross-env NODE_ENV=test jest --coverage --runInBand",
