fix(config): set poppler binary path in environment variables

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,7 @@ PFX_PASSPHRASE=
 PFX_FILE_PATH=
 SSL_CERT_PATH=
 SSL_KEY_PATH=
+
+# Path of poppler-utils binaries i.e. pdftohtml
+# Mandatory for Linux deployments, as Windows/Mac binaries already present in node-poppler module
+POPPLER_BINARY_PATH=
