--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "doc-conversion-service",
-	"version": "4.1.4",
+	"version": "4.2.0",
 	"description": "RESTful API web service for converting clinical documents/files",
 	"main": "src/index.js",
 	"repository": "git@github.com:Fdawgs/doc-conversion-service.git",
@@ -13,7 +13,7 @@
 		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md && prettier CHANGELOG.md --write",
 		"docs": "apidoc -i src/ -o docs/",
 		"dupe-check": "yarn jsinspect ./src",
-		"lint": "eslint . --cache --ext js,jsx,ts,tsx",
+		"lint": "eslint src/. --cache --ext js,jsx,ts,tsx",
 		"nodemon": "cross-env NODE_ENV=development nodemon src/index.js",
 		"prettier": "prettier . --write --ignore-path .gitignore",
 		"start": "node src/index.js",
