--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ jobs:
         - stage: Produce Coverage
           node_js: node
           os: windows
-          script: jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+          script: cp .env.template .env.test && jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
