--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"node-poppler": "^1.7.4",
 		"passport": "^0.4.1",
 		"passport-http-bearer": "^1.0.1",
+		"rtf.js": "^3.0.1",
 		"sanitize-middleware": "^2.0.12",
 		"uuid": "^8.2.0"
 	},
