--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md && prettier CHANGELOG.md --write",
 		"docs": "apidoc -i src/ -o docs/",
 		"dupe-check": "yarn jsinspect ./src",
-		"lint": "eslint . --cache --ext js,jsx,ts,tsx",
+		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
 		"nodemon": "cross-env NODE_ENV=development nodemon src/index.js",
 		"prettier": "prettier . --write",
 		"start": "node src/index.js",
