chore(scripts): use gitignore for prettier ignore-path option

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"dupe-check": "yarn jsinspect ./src",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
 		"nodemon": "cross-env NODE_ENV=development nodemon src/index.js",
-		"prettier": "prettier . --write",
+		"prettier": "prettier . --write --ignore-path .gitignore",
 		"start": "node src/index.js",
 		"test": "cross-env NODE_ENV=test yarn lint && yarn test-only",
 		"test-coverage": "cross-env NODE_ENV=test jest --coverage --runInBand",
