--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ script: echo "Running tests against $(node -v)..."
 jobs:
     include:
         - stage: Produce Coverage
-          node_js: node
+          node_js: lts/*
           os: windows
           script: cp .env.template .env.test && jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
