refactor(config): move api tokens to environment variables
BREAKING CHANGE: `auth.apiKeys` in `config.js` now uses `api_bearer_token_array` from .env file

--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,9 @@ PFX_FILE_PATH=
 SSL_CERT_PATH=
 SSL_KEY_PATH=
 
+# API keys
+API_BEARER_TOKEN_ARRAY='[{"service": "Discharge Summaries", "value": "Jimmini"}, {"service": "Bone Density", "value": "Cricket"}]'
+
 # Path of poppler-utils binaries i.e. pdftohtml
 # Mandatory for Linux deployments, as Windows/Mac binaries already present in node-poppler module
 POPPLER_BINARY_PATH=
