build(travis): add test step

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ branches:
         - /^v\d*\.\d*\.\d*$/
         - /^dependabot/.*$/
 
-script: echo "Running tests against $(node -v)..."
+script: echo "Running tests against $(node -v)..." && cp .env.template .env.test && yarn test
 
 jobs:
     include:
