--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
 		"node-mocks-http": "^1.8.1",
 		"nodemon": "^2.0.4",
 		"prettier": "^2.0.5",
-		"superagent": "^5.3.1",
-		"typescript": "^3.9.6"
+		"superagent": "^5.3.1"
 	},
 	"dependencies": {
 		"apidoc": "^0.23.0",
