chore: clarify on poppler binary requirements

--- a/.env.template
+++ b/.env.template
@@ -15,5 +15,5 @@ SSL_KEY_PATH=
 API_BEARER_TOKEN_ARRAY='[{"service": "Discharge Summaries", "value": "Jimmini"}, {"service": "Bone Density", "value": "Cricket"}]'
 
 # Path of poppler-utils binaries i.e. pdftohtml
-# Mandatory for Linux deployments, as Windows/Mac binaries already present in node-poppler module
+# Mandatory for Linux deployments, optional for Mac/Windows as binaries already present in node-poppler module
 POPPLER_BINARY_PATH=
