--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,10 @@ branches:
         - /^v\d*\.\d*\.\d*$/
         - /^dependabot/.*$/
 
-script: echo "Running tests against $(node -v)..." && cp .env.template .env.test && yarn test
+script:
+    - echo "Running tests against $(node -v)..."
+    - cp .env.template .env.test
+    - yarn test
 
 jobs:
     include:
@@ -34,4 +37,7 @@ jobs:
           name: produce coverage
           node_js: lts/*
           os: windows
-          script: cp .env.template .env.test && jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+          script:
+              - cp .env.template .env.test
+              - jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js &&
+                rm -rf ./coverage
