build(travis): add osx image

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: node_js
 
 cache: yarn
 
-dist: focal
-
 git:
     quiet: true
 
@@ -11,8 +9,14 @@ node_js:
     - 'lts/*'
     - 'node'
 
+# os
+dist: focal
+
 os:
+    - osx
     - windows
+
+osx_image: xcode12
 
 # See https://travis-ci.community/t/build-doesnt-finish-after-completing-tests/288/9
 env:
@@ -32,20 +36,23 @@ script:
     - yarn test
 
 jobs:
+    fast_finish: true
+    allow_failures:
+        - os: osx
     include:
         - stage: test
           name: linux deployment
           node_js: lts/*
           os: linux
           script:
-            - sudo apt-get -y install poppler-data poppler-utils
-            - cp .env.template .env.test
-            - POPPLER_BINARY_PATH='/usr/bin' yarn test
-        - stage: test 
+              - sudo apt-get -y install poppler-data poppler-utils
+              - cp .env.template .env.test
+              - POPPLER_BINARY_PATH='/usr/bin' yarn test
+        - stage: test
           name: produce coverage
           node_js: lts/*
           os: windows
           script:
-            - cp .env.template .env.test
-            - jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
-            - rm -rf ./coverage
+              - cp .env.template .env.test
+              - jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+              - rm -rf ./coverage
