--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
 # Service
 # Will use :: for IPv6 or 0.0.0.0 for IPv4 if not declared
+# NOTE: DO NOT declare HOST if using Docker
 HOST=
-PORT=
+PORT=3000
 
 # TLS/SSL
 # Will use PFX file and passphrase over SSL cert and key if both specified
