build(env): remove quotation marks from api_bearer_token array value

--- a/.env.template
+++ b/.env.template
@@ -13,7 +13,7 @@ SSL_CERT_PATH=
 SSL_KEY_PATH=
 
 # API keys
-API_BEARER_TOKEN_ARRAY='[{"service": "Discharge Summaries", "value": "Jimmini"}, {"service": "Bone Density", "value": "Cricket"}]'
+API_BEARER_TOKEN_ARRAY=[{"service": "Discharge Summaries", "value": "Jimmini"}, {"service": "Bone Density", "value": "Cricket"}]
 
 # Path of poppler-utils binaries i.e. pdftohtml
 # Mandatory for Linux deployments, optional for Mac/Windows as binaries already present in node-poppler module
