fix(server): add hpp middleware to protect against hpp attacks

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
 		"fix-utf8": "^1.1.1",
 		"glob": "^7.1.6",
 		"helmet": "^4.1.0",
+		"hpp": "^0.2.3",
 		"htmltidy2": "^0.3.0",
 		"is-html": "^2.0.0",
 		"jsdom": "^16.4.0",
