--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"docs": "apidoc -i src/ -o docs/",
 		"dupe-check": "yarn jsinspect ./src",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
-		"nodemon": "yarn docs && cross-env NODE_ENV=development nodemon src/index.js",
+		"nodemon": "yarn docs && nodemon",
 		"prettier": "prettier . --write --ignore-path .gitignore",
 		"start": "node src/index.js",
 		"test": "cross-env NODE_ENV=test yarn lint && yarn test-only",
@@ -28,6 +28,22 @@
 		],
 		"testEnvironment": "node",
 		"testTimeout": 10000
+	},
+	"nodemonConfig": {
+		"env": {
+			"NODE_ENV": "development",
+			"SUPPRESS_SUPPORT": 1
+		},
+		"ignore": [
+			"src/server/temp",
+			"test_files",
+			"test_ssl_cert"
+		],
+		"verbose": true,
+		"watch": [
+			".env.development",
+			"src"
+		]
 	},
 	"prettier": {
 		"arrowParens": "always",
