--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
     app:
-        env_file:
-            - .env
         build:
+            args:
+                NODE_ENV: production
             context: .
+        env_file: .env.production
+        environment:
+            POPPLER_BINARY_PATH: '/usr/bin/'
         ports:
             - ${PORT:-3000}:${PORT:-3000}
-        environment:
-            NODE_ENV: production
-            POPPLER_BINARY_PATH: '/usr/bin/'
