--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"express": "^4.17.1",
 		"express-pino-logger": "^5.0.0",
 		"file-stream-rotator": "^0.5.7",
+		"file-type": "^16.0.0",
 		"fix-utf8": "^1.1.1",
 		"glob": "^7.1.6",
 		"helmet": "^4.1.1",
