refactor(middleware): replace rtf.js dependency with node-unrtf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ services:
         env_file: .env.production
         environment:
             POPPLER_BINARY_PATH: '/usr/bin/'
+            UNRTF_BINARY_PATH: '/usr/bin/'
         ports:
             - 127.0.0.1:${PORT:-3000}:${PORT:-3000}
