--- a/.env.template
+++ b/.env.template
@@ -18,3 +18,7 @@ API_BEARER_TOKEN_ARRAY=[{"service": "Discharge Summaries", "value": "Jimmini"}, 
 # Path of poppler-utils binaries i.e. pdftohtml
 # Mandatory for Linux deployments, optional for Mac/Windows as binaries already present in node-poppler module
 POPPLER_BINARY_PATH=
+
+# Path of unrtf binary
+# Mandatory for Linux and Mac deployments, optional for Windows as binary is present in node-unrtf module
+UNRTF_BINARY_PATH=
