build(travis): move macos test to own stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ node_js:
 dist: focal
 
 os:
-    - osx
     - windows
 
 osx_image: xcode12.2
@@ -48,7 +47,14 @@ jobs:
           script:
               - sudo apt-get -y install poppler-data poppler-utils
               - cp .env.template .env.test
-              - POPPLER_BINARY_PATH='/usr/bin' yarn test
+        - stage: test
+        name: macos deployment
+        node_js: lts/*
+        os: osx
+        script:
+            - brew install poppler unrtf
+            - cp .env.template .env.test
+            - POPPLER_BINARY_PATH='/usr/local/bin' UNRTF_BINARY_PATH='/usr/local/bin' yarn test
         - stage: test
           name: produce coverage
           node_js: lts/*
