docs: correctly reference macos

--- a/.env.template
+++ b/.env.template
@@ -16,9 +16,9 @@ SSL_KEY_PATH=
 API_BEARER_TOKEN_ARRAY=[{"service": "Discharge Summaries", "value": "Jimmini"}, {"service": "Bone Density", "value": "Cricket"}]
 
 # Path of poppler-utils binaries i.e. pdftohtml
-# Mandatory for Linux deployments, optional for Mac/Windows as binaries already present in node-poppler module
+# Mandatory for Linux deployments, optional for macOS/Windows as binaries already present in node-poppler module
 POPPLER_BINARY_PATH=
 
 # Path of unrtf binary
-# Mandatory for Linux and Mac deployments, optional for Windows as binary is present in node-unrtf module
+# Mandatory for Linux and macOS deployments, optional for Windows as binary is present in node-unrtf module
 UNRTF_BINARY_PATH=
