--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ on:
 
     pull_request:
         # The branches below must be a subset of the branches above
-        branches: [master]
+        branches:
+            - master
 
 jobs:
     macos:
