--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
             - dependabot/**
             - feat/**
         tags:
+            # Wait for push events with tags matching v*, e.g. v1.0, v20.15.10, v0.3.1
             - v*.*.*
     pull_request:
         # The branches below must be a subset of the branches above
@@ -15,21 +16,20 @@ on:
 
 jobs:
     macos:
-        name: macOS build
+        name: macOS Build
         strategy:
             matrix:
                 node-version: [10.x, 12.x, 14.x]
-                os: ['macos-latest']
 
-        runs-on: ${{ matrix.os }}
+        runs-on: macos-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
+            - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
             - run: yarn install
-            - name: Run tests
+            - name: Run Tests
               env:
                   POPPLER_BINARY_PATH: /usr/local/bin
                   UNRTF_BINARY_PATH: /usr/local/bin
@@ -37,28 +37,27 @@ jobs:
                   brew install unrtf poppler
                   cp .env.template .env.test
                   yarn test-coverage
-            - name: Coveralls parallel
+            - name: Coveralls Parallel
               uses: coverallsapp/github-action@master
               with:
-                  github-token: ${{ secrets.github_token }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
                   parallel: true
 
     ubuntu:
-        name: Ubuntu build
+        name: Ubuntu Build
         strategy:
             matrix:
                 node-version: [10.x, 12.x, 14.x]
-                os: ['ubuntu-latest']
 
-        runs-on: ${{ matrix.os }}
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
+            - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
             - run: yarn install
-            - name: Run tests
+            - name: Run Tests
               env:
                   POPPLER_BINARY_PATH: /usr/bin
                   UNRTF_BINARY_PATH: /usr/bin
@@ -66,39 +65,38 @@ jobs:
                   sudo apt-get -y install poppler-data poppler-utils unrtf
                   cp .env.template .env.test
                   yarn test-coverage
-            - name: Coveralls parallel
+            - name: Coveralls Parallel
               uses: coverallsapp/github-action@master
               with:
-                  github-token: ${{ secrets.github_token }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
                   parallel: true
 
     windows:
-        name: Windows build
+        name: Windows Build
         strategy:
             matrix:
                 node-version: [10.x, 12.x, 14.x]
-                os: ['windows-latest']
 
-        runs-on: ${{ matrix.os }}
+        runs-on: windows-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
+            - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
             - run: yarn install
-            - name: Run tests
+            - name: Run Tests
               run: |
                   cp .env.template .env.test
                   yarn test-coverage
-            - name: Coveralls parallel
+            - name: Coveralls Parallel
               uses: coverallsapp/github-action@master
               with:
-                  github-token: ${{ secrets.github_token }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
                   parallel: true
 
     coverage:
-        name: Aggregate coverage calculations
+        name: Aggregate Coverage Calculations
         needs: [macos, ubuntu, windows]
         runs-on: ubuntu-latest
         steps:
