--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,12 @@
-# Service
+### SERVICE ###############################################
+
 # Will use :: for IPv6 or 0.0.0.0 for IPv4 if not declared
 # NOTE: DO NOT declare HOST if using Docker
 HOST=
 PORT=3000
 
-# TLS/SSL
+### HTTPS #################################################
+
 # Will use PFX file and passphrase over SSL cert and key if both specified
 USE_HTTPS=false
 PFX_PASSPHRASE=
@@ -12,8 +14,34 @@ PFX_FILE_PATH=
 SSL_CERT_PATH=
 SSL_KEY_PATH=
 
-# API keys
+### LOGGER ################################################
+
+# Level can be 'trace', 'debug', 'info', 'warn', 'error', or 'fatal'.
+# Defaults to 'info'
+LOGGER_LEVEL=
+# See https://momentjs.com/docs/#/displaying/format/ for 
+# date format options
+LOGGER_ROTATION_DATE_FORMAT='YYYY-MM-DD'
+# Filename including full path used by the stream.
+# Defaults to '/logs/doc-con-service-%DATE%.log' if not set
+LOGGER_ROTATION_FILENAME=
+# Frequency can be 'daily', 'custom', or 'test'. Defaults to 'daily'.
+# 'test' rotates every minute, set to 'custom' if you want to rotate
+# based on LOGGER_ROTATION_DATE_FORMAT
+LOGGER_ROTATION_FREQUENCY=
+# Max number of logs to keep. If not set, it won't remove past logs
+LOGGER_ROTATION_MAX_LOGS=
+# Max size of the file after which it will rotate. It can 
+# be combined with frequency or date format. The size units 
+# are 'k', 'm' and 'g'. Units need to directly follow
+# a number e.g. 1g, 100m, 20k.
+LOGGER_ROTATION_MAX_SIZE=
+
+### API keys ##############################################
+
 API_BEARER_TOKEN_ARRAY=[{"service": "Discharge Summaries", "value": "Jimmini"}, {"service": "Bone Density", "value": "Cricket"}]
+
+### Binary Paths ##########################################
 
 # Path of poppler-utils binaries i.e. pdftohtml
 # Mandatory for Linux deployments, optional for macOS/Windows as binaries already present in node-poppler module
