--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
 		"node-unrtf": "^1.0.4",
 		"passport": "^0.4.1",
 		"passport-http-bearer": "^1.0.1",
+		"pino": "^6.7.0",
 		"sanitize-middleware": "^4.0.1",
 		"tesseract.js": "^2.1.4",
 		"uuid": "^8.3.1"
