--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
 		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md && prettier CHANGELOG.md --write",
 		"docs": "apidoc -i src/ -o docs/",
 		"dupe-check": "yarn jsinspect ./src",
+		"jest": "cross-env NODE_ENV=test LOGGER_ENABLED=false jest --detectOpenHandles --runInBand",
+		"jest-coverage": "cross-env NODE_ENV=test LOGGER_ENABLED=false jest --coverage --runInBand",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
-		"nodemon": "yarn docs && nodemon",
-		"prettier": "prettier . --write --ignore-path .gitignore",
-		"start": "node src/index.js",
-		"test": "cross-env NODE_ENV=test yarn lint && yarn test-only",
-		"test-coverage": "cross-env NODE_ENV=test jest --coverage --runInBand",
-		"test-only": "cross-env NODE_ENV=test jest --detectOpenHandles --runInBand"
+		"lint:prettier": "prettier . --write --ignore-path .gitignore",
+		"lint:prettier:ci": "prettier . --check --ignore-path .gitignore",
+		"start": "node src/server.js",
+		"test": "cross-env NODE_ENV=test yarn lint && yarn jest"
 	},
 	"jest": {
 		"clearMocks": true,
