--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,19 +2,30 @@ name: CI
 
 on:
     push:
-        branches:
-            - master
-            - dependabot/**
-            - feat/**
-        tags:
-            # Wait for push events with tags matching v*, e.g. v1.0, v20.15.10, v0.3.1
-            - v*.*.*
+        paths-ignore:
+            - 'docs/**'
+            - '*.md'
     pull_request:
-        # The branches below must be a subset of the branches above
-        branches:
-            - master
+        paths-ignore:
+            - 'docs/**'
+            - '*.md'
 
 jobs:
+    lint:
+        name: Lint
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: 14.x
+            - name: Install
+              run: yarn --immutable
+            - name: Run ESLint
+              run: yarn lint
+            - name: Run Prettier
+              run: yarn lint:prettier:ci
+
     macos:
         name: macOS Build
         strategy:
@@ -25,10 +36,11 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: yarn install
+            - name: Install
+              run: yarn --immutable
             - name: Run Tests
               env:
                   POPPLER_BINARY_PATH: /usr/local/bin
@@ -53,10 +65,11 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: yarn install
+            - name: Install
+              run: yarn --immutable
             - name: Run Tests
               env:
                   POPPLER_BINARY_PATH: /usr/bin
@@ -81,10 +94,11 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: yarn install
+            - name: Install
+              run: yarn --immutable
             - name: Run Tests
               run: |
                   cp .env.template .env.test
