--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
               run: |
                   brew install unrtf poppler
                   cp .env.template .env.test
-                  yarn test-coverage
+                  yarn jest-coverage
             - name: Coveralls Parallel
               uses: coverallsapp/github-action@master
               with:
@@ -77,7 +77,7 @@ jobs:
               run: |
                   sudo apt-get -y install poppler-data poppler-utils unrtf
                   cp .env.template .env.test
-                  yarn test-coverage
+                  yarn jest-coverage
             - name: Coveralls Parallel
               uses: coverallsapp/github-action@master
               with:
@@ -102,7 +102,7 @@ jobs:
             - name: Run Tests
               run: |
                   cp .env.template .env.test
-                  yarn test-coverage
+                  yarn jest-coverage
             - name: Coveralls Parallel
               uses: coverallsapp/github-action@master
               with:
