--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,17 +3,17 @@
 #
 # You may wish to alter this file to override the set of languages analyzed,
 # or to provide custom queries or build logic.
-name: 'CodeQL'
+name: "CodeQL"
 
 on:
     push:
         paths-ignore:
-            - 'docs/**'
-            - '*.md'
+            - "docs/**"
+            - "*.md"
     pull_request:
         paths-ignore:
-            - 'docs/**'
-            - '*.md'
+            - "docs/**"
+            - "*.md"
 
 jobs:
     CodeQL-Build:
