--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,6 @@ jobs:
               run: yarn lint
             - name: Run Prettier
               run: yarn lint:prettier:ci
-            - name: Compile TypeScript Definition File
-              run: yarn tsc
 
     unit-tests:
         name: Unit Tests
@@ -65,13 +63,26 @@ jobs:
                       -yarn-
             - name: Install
               run: yarn --frozen-lockfile
-            - name: Install macOS dependencies
+            - name: Run macOS Tests
               if: matrix.os == 'macos-latest'
-              run: brew install poppler
-            - name: Install Ubuntu dependencies
+              env:
+                  POPPLER_BINARY_PATH: /usr/local/bin
+                  UNRTF_BINARY_PATH: /usr/local/bin
+              run: |
+                  brew install unrtf poppler
+                  cp .env.template .env.test
+                  yarn jest-coverage
+            - name: Run Ubuntu Tests
               if: matrix.os == 'ubuntu-20.04'
-              run: sudo apt-get -y install poppler-data poppler-utils
-            - name: Run Tests
+              env:
+                  POPPLER_BINARY_PATH: /usr/bin
+                  UNRTF_BINARY_PATH: /usr/bin
+              run: |
+                  sudo apt-get -y install poppler-data poppler-utils unrtf
+                  cp .env.template .env.test
+                  yarn jest-coverage
+            - name: Run Windows Tests
+              if: matrix.os == 'windows-latest'
               run: |
                   cp .env.template .env.test
                   yarn jest-coverage
