--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,22 +20,23 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                   node-version: 14.x
-            - name: Get Yarn Cache Directory Path
-              id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn cache dir)"
+            - name: Get npm cache directory
+              id: npm-cache-dir
+              run: |
+                  echo "::set-output name=dir::$(npm config get cache)"
             - uses: actions/cache@v2
-              id: yarn-cache
+              id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
               with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: yarn-${{ hashFiles('**/yarn.lock') }}
+                  path: ${{ steps.npm-cache-dir.outputs.dir }}
+                  key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
                   restore-keys: |
-                      -yarn-
+                      ${{ runner.os }}-node-
             - name: Install
-              run: yarn --frozen-lockfile
+              run: npm ci --ignore-scripts
             - name: Run ESLint
-              run: yarn lint
+              run: npm run lint
             - name: Run Prettier
-              run: yarn lint:prettier:ci
+              run: npm run lint:prettier:ci
 
     unit-tests:
         name: Unit Tests
@@ -51,18 +52,19 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
-            - name: Get Yarn Cache Directory Path
-              id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn cache dir)"
+            - name: Get npm cache directory
+              id: npm-cache-dir
+              run: |
+                  echo "::set-output name=dir::$(npm config get cache)"
             - uses: actions/cache@v2
-              id: yarn-cache
+              id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
               with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: yarn-${{ hashFiles('**/yarn.lock') }}
+                  path: ${{ steps.npm-cache-dir.outputs.dir }}
+                  key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
                   restore-keys: |
-                      -yarn-
+                      ${{ runner.os }}-node-
             - name: Install
-              run: yarn --frozen-lockfile
+              run: npm ci --ignore-scripts
             - name: Run macOS Tests
               if: matrix.os == 'macos-latest'
               env:
@@ -71,7 +73,7 @@ jobs:
               run: |
                   brew install unrtf poppler
                   cp .env.template .env.test
-                  yarn jest-coverage
+                  npm run jest-coverage
             - name: Run Ubuntu Tests
               if: matrix.os == 'ubuntu-20.04'
               env:
@@ -80,12 +82,12 @@ jobs:
               run: |
                   sudo apt-get -y install poppler-data poppler-utils unrtf
                   cp .env.template .env.test
-                  yarn jest-coverage
+                  npm run jest-coverage
             - name: Run Windows Tests
               if: matrix.os == 'windows-latest'
               run: |
                   cp .env.template .env.test
-                  yarn jest-coverage
+                  npm run jest-coverage
             - name: Coveralls Parallel
               uses: coverallsapp/github-action@master
               with:
