--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "RESTful API web service for converting clinical documents/files",
 	"main": "src/index.js",
 	"repository": "git@github.com:Fdawgs/doc-conversion-service.git",
-	"author": "Frazer Smith",
+	"author": "Frazer Smith <frazer.dev@outlook.com>",
 	"license": "MIT",
 	"engines": {
 		"node": ">=10.22.0"
@@ -12,14 +12,14 @@
 	"scripts": {
 		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md && prettier CHANGELOG.md --write",
 		"docs": "apidoc -i src/ -o docs/",
-		"dupe-check": "yarn jsinspect ./src",
+		"dupe-check": "npm run jsinspect ./src",
 		"jest": "cross-env NODE_ENV=test LOGGER_ENABLED=false jest --detectOpenHandles --runInBand",
 		"jest-coverage": "cross-env NODE_ENV=test LOGGER_ENABLED=false jest --coverage --runInBand",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
 		"lint:prettier": "prettier . --write --ignore-path .gitignore",
 		"lint:prettier:ci": "prettier . --check --ignore-path .gitignore",
 		"start": "node src/server.js",
-		"test": "cross-env NODE_ENV=test yarn lint && yarn jest"
+		"test": "cross-env NODE_ENV=test npm run lint && npm run jest"
 	},
 	"jest": {
 		"clearMocks": true,
