--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
 	"version": "6.4.1",
 	"description": "RESTful API web service for converting clinical documents/files",
 	"main": "src/index.js",
-	"repository": "git@github.com:Fdawgs/doc-conversion-service.git",
-	"author": "Frazer Smith <frazer.dev@outlook.com>",
+	"repository": "git+https://github.com/Fdawgs/doc-conversion-service.git",
+	"homepage": "https://github.com/Fdawgs/doc-conversion-service",
+	"bugs": {
+		"url": "https://github.com/Fdawgs/doc-conversion-service/issues"
+	},
 	"license": "MIT",
+	"author": "Frazer Smith <frazer.dev@outlook.com>",
 	"engines": {
 		"node": ">=10.22.0"
 	},
