--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"scripts": {
 		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md && prettier CHANGELOG.md --write",
 		"docs": "apidoc -i src/ -o docs/",
-		"dupe-check": "npm run jsinspect ./src",
+		"dupe-check": "jsinspect ./src",
 		"jest": "cross-env NODE_ENV=test LOGGER_ENABLED=false jest --detectOpenHandles --runInBand",
 		"jest-coverage": "cross-env NODE_ENV=test LOGGER_ENABLED=false jest --coverage --runInBand",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
